--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <style>body{background-image:url("./media/background-652L7EH5.jpg");background-size:cover;background-position:center;background-repeat:no-repeat;height:100%;margin:0;padding:0}</style><link rel="stylesheet" href="styles-AZZWABEC.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-AZZWABEC.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-VT3NP5AK.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-ZPGALLQ3.js" type="module"></script></body>
 </html>
